--- a/src/pages/Explore.module.css
+++ b/src/pages/Explore.module.css
@@ -16,7 +16,6 @@ html {
   text-align: center;
   font-size: 4rem;
   font-weight: 600;
-  margin-top: 2rem;
 }
 
 .explore span {
